added emd notebook

--- a/notebooks/emd-package-intro.ipynb
+++ b/notebooks/emd-package-intro.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1109f9f1",
+   "id": "72fac3a7",
    "metadata": {},
    "source": [
-    "The purpose of this notebook is to get you started thinking about EMD, and using the python `emd` package (https://emd.readthedocs.io/en/stable/emd_tutorials/00_quick_start/emd_tutorial_00_start_01_quicksift.html)"
+    "### The purpose of this notebook is to get you started thinking about EMD, and using the python `emd` package (https://emd.readthedocs.io/en/stable/emd_tutorials/00_quick_start/emd_tutorial_00_start_01_quicksift.html)"
    ]
   },
   {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b707c3a",
+   "id": "dc6add5b",
    "metadata": {},
    "source": [
     "Perform empirical mode decomposition on the envelopes. This process decomposes the train envelope into 12 IMFs (intrinsic moment functions):"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "24f71660",
+   "id": "e6dd1b7a",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8b41e6bc",
+   "id": "6436535f",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf7c20f1",
+   "id": "303cb1e8",
    "metadata": {},
    "source": [
     "EMD has a filterbank property: the IMFs naturally exhibit different frequency bands"
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "391e98dd",
+   "id": "b6d83f03",
    "metadata": {},
    "source": [
     "# Fit forward models using the IMFs"
